--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,3 @@
-.second {
-  margin: 20px;
-}
-
 .custom-header {
   position: absolute;
   top: 0;
@@ -11,4 +7,21 @@
 
 .page-container {
   margin-top: 50px;
+}
+
+.nav-active {
+  background-color: #FFFFFF;
+}
+
+.navbar-format {
+  width: 40%;
+}
+
+.navbar-links {
+  width: 50%;
+  text-align: center;
+}
+
+.margin-right {
+  margin-right: 15px;
 }
