--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,3 +25,24 @@
 .margin-right {
   margin-right: 15px;
 }
+
+.profile-list {
+  list-style-type: none;
+}
+
+.ul-profile {
+  margin-left: -30px; 
+}
+
+.timeline {
+  width: auto;
+  height: 50px;
+  border: 13px solid #bed5cd;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+.timeline-date {
+  display: inline-block;
+}
