Update fonts to cinzel and raleway

--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -1,3 +1,11 @@
+* {
+  font-family: 'Raleway', sans-serif;
+}
+
+.navbar-brand {
+  font-family: 'Cinzel', serif;
+}
+
 .custom-header {
   position: absolute;
   top: 0;
