Add end points journal dates

--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -55,3 +55,24 @@ ul {
     background: #000;
     color: #fff;
 }
+
+.timeline {
+  height: 50px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  padding: 0;
+}
+
+.timeline-date {
+  display: inline-block;
+  width: calc(100% / 7);
+  text-align: center;
+}
+
+.which-date {
+  width: 40px;
+  border: 1px solid;
+  position: absolute;
+  left: 5%;
+}
