Update dav active color and logo size

--- a/client/styles/scss/_nav.scss
+++ b/client/styles/scss/_nav.scss
@@ -18,7 +18,7 @@ nav button {
 .navbar-brand {
   height: 60px;
   font-family: $major, serif;
-  font-size: 26px;
+  font-size: 30px;
   display: flex;
   align-items: center;
 }
@@ -55,7 +55,7 @@ nav button {
 }
 
 .nav-active {
-  box-shadow: 0 2px 0 0 $silver;
+  box-shadow: 0 2px 0 0 $lynch;
 }
 
 
