--- a/client/styles/scss/_nav.scss
+++ b/client/styles/scss/_nav.scss
@@ -1,6 +1,6 @@
 nav {
   z-index: 9999999;
-  letter-spacing: 1.5px;
+  letter-spacing: 1.3px;
 }
 
 nav button {
@@ -18,6 +18,7 @@ nav button {
 
 .navbar-brand {
   height: 60px;
+  letter-spacing: 1.5px !important;
   font-family: $major, serif;
   font-size: 30px;
   display: flex;
