--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -10,6 +10,7 @@ $lynch: #6C7A89;
 @import 'dashboard';
 @import 'calendar';
 @import 'timeline';
+@import 'scatterchart';
 @import 'interaction';
 
 * {
