--- a/client/styles/scss/_circles.scss
+++ b/client/styles/scss/_circles.scss
@@ -1,33 +1,67 @@
-// text {
-//   font-size: 9px;
-//   pointer-events: none;
-//   // text-shadow: 1px 1px #fff;
-// }
+.dashboard-circles {
+  width: 80%;
+}
 
-// text.parent {
-//   font-size: 16px;
-//   fill: #404040;
-// }
+.circles-svg {
+  margin-top: 20px;
+}
 
-// circle {
-//   fill: #ffffff;
-//   fill-opacity: .8;
-//   pointer-events: all;
-//   cursor: pointer;
-//   // stroke: #999;
-// }
+text.child {
+  font-size: 9px;
+  pointer-events: none;
+}
 
-// circle.parent {
-//   fill: #C0C0C0;
-//   fill-opacity: .2;
-// }
+text.parent {
+  font-size: 16px;
+  fill: $lynch;
+  font-weight: 400;
+  // text-shadow: 1px 1px #fff;
+}
 
-// circle.parent:hover {
-//   fill-opacity: .4;
-//   // stroke: #73adde;
-//   // stroke-width: .5px;
-// }
+circle {
+  fill: #ffffff;
+  fill-opacity: .8;
+  pointer-events: all;
+  cursor: pointer;
+  // stroke: #999;
+}
 
-// circle.child {
-//   pointer-events: none;
-// }
+circle.parent {
+  fill: #C0C0C0;
+  fill-opacity: .2;
+}
+
+circle.parent:hover {
+  fill-opacity: .4;
+  // stroke: #73adde;
+  // stroke-width: .5px;
+}
+
+circle.child {
+  pointer-events: none;
+}
+
+.circles-footer {
+  display: flex;
+  justify-content: center;
+}
+
+.dashboard-circles .quote {
+  font-size: 14px;
+  width: 80%;
+  margin: 20px;
+  padding: 20px;
+  background-color: $lynch;
+  opacity: 0.8;
+  border-radius: 5px;
+  > div {
+    color: white;
+  }
+  .quote-attribution {
+    text-align: right;
+    > span {
+      color: white;
+      font-style: italic;
+    }
+  }
+}
