--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -42,7 +42,7 @@ ul {
   background-color: $haze !important;
 }
 
-.btn {
+.button {
     border: 1px solid #000;
     border-radius: 5px;
     color: #000;
@@ -51,7 +51,7 @@ ul {
     text-transform: uppercase;
 }
 
-.btn:hover {
+.button:hover {
     background: #000;
     color: #fff;
 }
@@ -91,5 +91,4 @@ ul {
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-  z-index: -1;
 }
