--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -128,6 +128,18 @@ ul {
   }
 }
 
+.amazon-login-button {
+  color: #232F3E;
+  border-color: #232F3E;
+  background-color: rgba(35,47,62, .04);
+  display: block;
+  width: 300px;
+  margin: 10px auto 0 auto;
+  &:hover {
+    background-color: #3B5998;
+  }
+}
+
 a.login-button {
     -webkit-appearance: button;
     -moz-appearance: button;
@@ -146,16 +158,16 @@ a.login-button {
     }
 }
 
-.modal-dialog {
-  position: absolute !important;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+// .modal-dialog {
+//   position: absolute !important;
+//   top: 0;
+//   left: 0;
+//   bottom: 0;
+//   right: 0;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
 
 .modal-dialog {
   width: 440px;
