Finish settings page, errors but seem to be unrelated to code

--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -12,6 +12,7 @@ $lynch: #6C7A89;
 @import 'scatterchart';
 @import 'interaction';
 @import 'circles';
+@import 'profile';
 
 * {
   font-family: 'Raleway', sans-serif;
