--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -9,6 +9,7 @@ $lynch: #6C7A89;
 @import 'dashboard';
 @import 'calendar';
 @import 'timeline';
+@import 'activityfeed';
 @import 'scatterchart';
 @import 'interaction';
 @import 'circles';
