--- a/client/styles/scss/_timeline.scss
+++ b/client/styles/scss/_timeline.scss
@@ -1,3 +1,34 @@
-.timeline {
+.journal-timeline { // in Journal.js component
   width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 20px;
+}
+
+.timeline-glyph { // in Journal.js component
+  font-size: 14px;
+  line-height: 14px;
+  height: 14px;
+}
+
+.timeline { // in Timeline.js component
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  div.timeline-day {
+    font-size: 14px;
+    line-height: 14px;
+    height: 14px;
+    font-family: $major;
+  }
+}
+
+.timeline-glyph { // in Journal.js file
+  cursor: pointer;
+}
+
+.timeline-day { // in Timeline.js file
+  cursor: pointer;
 }
