--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -119,6 +119,10 @@ button.close-modal {
   box-shadow: inset 0 0 10em 20em rgba(255,255,255,.1);
 }
 
+.homepage-background {
+  background-color: red;
+}
+
 .home-top-content-container {
   background-color: lightgray;
 }
