--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -162,19 +162,15 @@ a.login-button {
     }
 }
 
-// .modal-dialog {
-//   position: absolute !important;
-//   top: 0;
-//   left: 0;
-//   bottom: 0;
-//   right: 0;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// }
-
 .modal-dialog {
   width: 440px;
   margin-top: 10%;
 }
 
+.homepage-background {
+  background-color: red;
+}
+
+.home-top-content-container {
+  background-color: lightgray;
+}
