add images for home

--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -167,10 +167,26 @@ a.login-button {
   margin-top: 10%;
 }
 
-.homepage-background {
-  background-color: red;
-}
+// .home-top-content-container {
+//   background-color: lightgray;
+// }
 
-.home-top-content-container {
-  background-color: lightgray;
-}
+// div.home-jumbotron.jumbotron {
+//   padding-top: 48px;
+//   padding-bottom: 48px;
+// }
+
+// .home-jumbotron {
+//   margin: 1px 0 !important;
+// }
+
+// .jumbo-right-text {
+//   text-align: right;
+//   margin-right: 8.33333333%;
+// }
+
+// .jumbo-left-text {
+//   display: block !important;
+//   margin-top: 0;
+//   height: 150px;
+// }
