Additional scss related to journal pages

--- a/client/styles/scss/_page.scss
+++ b/client/styles/scss/_page.scss
@@ -1,5 +1,5 @@
 .page {
-  width: 100%;
+  width: 80%;
   // display: flex;
   // align-items: center;
   // flex-direction: column;
@@ -17,16 +17,17 @@
 }
 
 .page-title {
+  font-family: $major;
   font-size: 16px;
-  font-weight: 400;
 }
 
 .page-subtitle {
   font-size: 14px;
+  font-weight: 400;
 }
 
 .page-subtext {
-  font-size: 10px;
+  font-size: 12px;
 }
 
 .page-form {
@@ -35,9 +36,13 @@
 
 .page-input-container {
   width: 100%;
+  height: 20px;
   margin: 5px;
   font-size: 14px;
+  position: relative;
   input {
+    position: absolute;
+    right: 0;
     width: 95%;
     border: 0px solid white;
     border-radius: 5px;
