--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -183,7 +183,7 @@ div.home-jumbotron.jumbotron {
   padding-top: 48px;
   padding-bottom: 48px;
   &:nth-child(odd) {
-    background-color: $darkLynch
+    background-color: $midLynch
   }
 }
 
@@ -210,7 +210,6 @@ div.home-jumbotron.jumbotron {
   font-size: 70px;
   font-family: $major, serif;
   letter-spacing: 1.5px !important;
-  // text-shadow: 0 0 100px black;
 }
 
 .home-slogan {
@@ -222,11 +221,9 @@ div.home-jumbotron.jumbotron {
 }
 
 .home-signup-form {
-  // justify-content: center;
   max-width: 350px;
   margin: 0 auto;
   padding: 10px 25px;
-  // border: 1px solid $haze;
   border-radius: 10px;
   box-shadow: inset 0 0 10em 5em rgba(0,0,0,.2);
 }
@@ -243,7 +240,7 @@ div.home-jumbotron.jumbotron {
 
 .home-jumbotron {
   margin: 1px 0 !important;
-  color: $dark;
+  color: $silver;
 }
 
 .jumbo-right-text {
