local authentication now 100% functional

--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -175,6 +175,11 @@ a.login-button {
   padding-left: 0 !important;
 }
 
+.login-last-break {
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+
 button.close-modal {
   padding: 3px;
   font-size: 12px;
