Add docked sidebar on dashboard page and update scss

--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -4,9 +4,8 @@
 @import 'partials/base';
 
 // Partials
-@import 'partials/navigation/nav';
-@import 'partials/navigation/menu';
-@import 'partials/user/profile';
+@import 'partials/nav';
+@import 'partials/profile';
 @import 'partials/journal/journal';
 @import 'partials/journal/timeline';
 @import 'partials/journal/page';
