--- a/client/styles/scss/partials/dashboard/_circles.scss
+++ b/client/styles/scss/partials/dashboard/_circles.scss
@@ -46,7 +46,7 @@ circle.child {
   justify-content: center;
 }
 
-.dashboard-circles .quote {
+.circles-footer > .quote {
   font-size: 14px;
   width: 80%;
   margin: 20px;
