Implement composition treemap analysis of cumulative user entries

--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'partials/journal/timeline';
 @import 'partials/journal/page';
 @import 'partials/dashboard/dashboard';
+@import 'partials/dashboard/composition';
 @import 'partials/dashboard/calendar';
 @import 'partials/dashboard/scatterchart';
 @import 'partials/dashboard/circles';
