--- a/client/styles/scss/partials/dashboard/_dashboard.scss
+++ b/client/styles/scss/partials/dashboard/_dashboard.scss
@@ -38,9 +38,10 @@
 .dashboard-body {
   position: absolute;
   top: $nav-height;
+  left: 0;
   right: 0;
   bottom: 0;
-  width: 80%;
+  // width: 80%;
   display: flex;
   align-items: center;
   flex-direction: column;
