--- a/client/styles/scss/partials/_base.scss
+++ b/client/styles/scss/partials/_base.scss
@@ -13,7 +13,7 @@ $nav-height: 60px;
 * {
   font-family: 'Raleway', sans-serif;
   font-weight: 200;
-  color: $lynch;
+  color: rgba(20, 20, 20, 0.9);
 }
 
 a {
