--- a/client/styles/scss/partials/journal/_journal.scss
+++ b/client/styles/scss/partials/journal/_journal.scss
@@ -1,4 +1,9 @@
 .journal-container {
+  // background: -webkit-linear-gradient(top, rgb(136,199,201) 58%, rgb(202,232,235) 100%);
+  // background: -moz-linear-gradient(top, rgb(136,199,201) 58%, rgb(202,232,235) 100%);
+  // background: -ms-linear-gradient(top, rgb(136,199,201) 58%, rgb(202,232,235) 100%);
+  // background: -o-linear-gradient(top, rgb(136,199,201) 58%, rgb(202,232,235) 100%);
+  // background: linear-gradient(top, rgb(136,199,201) 58%, rgb(202,232,235) 100%);
   // position: absolute;
   // top: 60px;
   // right: 0;
