--- a/client/styles/scss/partials/dashboard/activityfeed/_activityfeed.scss
+++ b/client/styles/scss/partials/dashboard/activityfeed/_activityfeed.scss
@@ -1,3 +1,12 @@
 .dashboard-activity-feed {
   width: 80%;
 }
+
+.streak-header {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.activity-feed {
+  margin-right: 26%;
+}
