--- a/client/styles/scss/partials/dashboard/_dashboard.scss
+++ b/client/styles/scss/partials/dashboard/_dashboard.scss
@@ -7,31 +7,40 @@
 
 .menu {
   position: absolute;
-  top: $nav-height;
-  bottom: 0;
+  top: #{(2 * $nav-height)};
+  bottom: $nav-height;
   left: 0;
   width: 20%;
   display: flex;
   cursor: pointer;
-  justify-content: space-around;
+  justify-content: center;
+  padding: 0 10px 0 0;
+  // justify-content: center;
   flex-direction: column;
   > div {
+    margin: 2% 0;
+    height: 20%;
+    width: 80%;
     color: white;
     font-size: 16px;
     padding-left: 10%;
-    opacity: 0.6;
-    background-color: $lynch;
+    opacity: 0.8;
+    background-color: #87D37C;
     display: flex;
     align-items: center;
-    height: 100%;
+    // height: 100%;
     // border-right: 1px solid $lynch;
   }
   > div:hover {
-    opacity: 0.5;
+    opacity: 0.9;
+    // height: 25%;
+    width: 100%;
   }
   > .selected {
-    opacity: 0.5;
-    padding-left: 15%;
+    opacity: 0.9;
+    width: 100%;
+    // padding-left: 15%;
+    // height: 200px;
   }
 }
 
