--- a/client/styles/scss/partials/dashboard/_composition.scss
+++ b/client/styles/scss/partials/dashboard/_composition.scss
@@ -1,13 +1,12 @@
-// .composition-treemap {
-//   * {
-//     font-weight: 200 !important;
-//   }
-//   text {
-//     font-family: $minor !important;
-//     font-weight: 200 !important;
-//   }
-// }
+.recharts-layer > g > rect {
+  stroke: $darkLynch !important;
+}
 
-// .treemap-group-label {
-//   font-family: $major !important;
-// }
+.treemap-element-label { // major groupings label
+  font-weight: 100 !important;
+}
+
+.treemap-group-label { // small items label
+  stroke: $darkLynch !important;
+  font-weight: 100 !important;
+}
