--- a/client/styles/scss/main.scss
+++ b/client/styles/scss/main.scss
@@ -1,12 +1,13 @@
-// Try to keep this file clean of anything that's not an @import statement
-
 // Modules (if we had any) and Variables
 @import 'partials/base';
 
 // Partials
 @import 'partials/nav';
 @import 'partials/profile';
+@import 'partials/flex';
+@import 'partials/home';
 @import 'partials/button';
+@import 'partials/modal';
 @import 'partials/journal/journal';
 @import 'partials/journal/timeline';
 @import 'partials/journal/page';
@@ -17,144 +18,3 @@
 @import 'partials/dashboard/circles';
 @import 'partials/dashboard/activityfeed/activityfeed';
 @import 'partials/dashboard/activityfeed/interaction';
-
-.transparent {
-  opacity: 0.9;
-}
-
-.white-background {
-  background-color: #FFFFFF !important;
-}
-
-.haze-background {
-  background-color: $haze !important;
-}
-
-
-
-.login-modal {
-  z-index: 100000001;
-}
-
-.fade {
-  z-index: 100000000;
-}
-
-.login-modal-title {
-  font-size: 20px;
-}
-
-.modal-dialog {
-  width: 380px;
-  margin-top: 16%;
-}
-
-.logal-login-button {
-  padding-left: 0 !important;
-}
-
-.login-last-break {
-  margin-top: 5px;
-  margin-bottom: 15px;
-}
-
-button.close-modal {
-  padding: 3px;
-  font-size: 12px;
-  color: $haze;
-  border-color: $haze;
-  &:hover {
-    color: $lynch;
-  }
-}
-
-.home-main-image {
-  box-shadow: inset 0 0 10em 20em rgba(255,255,255,.1);
-}
-
-.home-top-content-container {
-  background-color: lightgray;
-}
-
-div.home-jumbotron.jumbotron {
-  padding-top: 48px;
-  padding-bottom: 48px;
-  &:nth-child(odd) {
-    background-color: $midLynch
-  }
-}
-
-.home-banner {
-  height: 100vh;
-  min-height: 605px;
-  background-image: url("../../images/home/homepage1.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.home-login-button {
-  float: right !important;
-  margin-top: 10px;
-  margin-right: 10px;
-}
-
-.home-title {
-  margin-top: 0;
-  margin-bottom: 5px;
-  padding-top: 40px;
-  text-align: center;
-  color: $darkLynch;
-  font-size: 70px;
-  font-family: $major, serif;
-  letter-spacing: 1.5px !important;
-}
-
-.home-slogan {
-  margin-bottom: 40px;
-  font-size: 25px;
-  font-family: $minor, serif;
-  color: $midLynch;
-  text-align: center;
-}
-
-.home-signup-form {
-  max-width: 350px;
-  margin: 0 auto;
-  padding: 10px 25px;
-  border-radius: 10px;
-  box-shadow: inset 0 0 10em 5em rgba(0,0,0,.2);
-}
-
-.home-section-title {
-  font-family: $minor, serif;
-  color: $porcelain;
-  margin-bottom: 17px;
-}
-
-.jumbo-banner {
-  background-color: transparent !important;
-}
-
-.home-jumbotron {
-  margin: 1px 0 !important;
-  color: $silver;
-}
-
-.jumbo-right-text {
-  text-align: right;
-  margin-right: 8.33333333%;
-}
-
-.jumbo-left-text {
-  display: block !important;
-  margin-top: 0;
-  height: 150px;
-}
-
-.jumbo-first {
-  margin-top: -20px !important;
-}
-
-label {
-  color: $midLynch;
-}
