--- a/client/styles/scss/partials/dashboard/_dashboard.scss
+++ b/client/styles/scss/partials/dashboard/_dashboard.scss
@@ -18,29 +18,26 @@
   // justify-content: center;
   flex-direction: column;
   > div {
+    border-radius: 0 4px 4px 0;
     margin: 2% 0;
     height: 20%;
     width: 80%;
     color: white;
     font-size: 16px;
     padding-left: 10%;
-    opacity: 0.8;
     background-color: #87D37C;
     display: flex;
     align-items: center;
-    // height: 100%;
-    // border-right: 1px solid $lynch;
+    -webkit-transition: width 300ms;
+    -moz-transition: width 300ms;
+    -o-transition: width 300ms;
+    transition: width 300ms;
   }
   > div:hover {
-    opacity: 0.9;
-    // height: 25%;
     width: 100%;
   }
   > .selected {
-    opacity: 0.9;
     width: 100%;
-    // padding-left: 15%;
-    // height: 200px;
   }
 }
 
