Implement API limiter override button

--- a/client/styles/scss/partials/_button.scss
+++ b/client/styles/scss/partials/_button.scss
@@ -25,7 +25,7 @@
   width: 100px;
 }
 
-.journey-btn-mid {
+.journey-btn-md {
   width: 150px;
 }
 
@@ -79,6 +79,13 @@
   font-size: 14px;
   border: 0px;
   margin: 0 5px;
+}
+
+.analyze-btn {
+  width: 15% !important;
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
 }
 
 // button.close-modal {
