--- a/client/styles/scss/partials/_home.scss
+++ b/client/styles/scss/partials/_home.scss
@@ -1,5 +1,14 @@
 .home-main-image {
-  box-shadow: inset 0 0 10em 20em rgba(255,255,255,.1);
+  // box-shadow: inset 0 100em 0 100em rgba(0,0,0,.2);
+}
+
+.vignette {
+  // background: -moz-radial-gradient(center, ellipse cover, rgba(0,0,0,0.04) 0%, rgba(0,0,0,0.73) 100%);
+  // background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,0.04)), color-stop(100%,rgba(0,0,0,0.73)));
+  // background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0.04) 0%,rgba(0,0,0,0.73) 100%);
+  // background: -o-radial-gradient(center, ellipse cover, rgba(0,0,0,0.04) 0%,rgba(0,0,0,0.73) 100%);
+  // background: -ms-radial-gradient(center, ellipse cover, rgba(0,0,0,0.04) 0%,rgba(0,0,0,0.73) 100%);
+  // background: radial-gradient(ellipse at center, rgba(0,0,0,0.04) 0%,rgba(0,0,0,0.73) 100%);  
 }
 
 .home-top-content-container {
@@ -37,14 +46,17 @@ div.home-jumbotron.jumbotron {
   font-size: 70px;
   font-family: $major, serif;
   letter-spacing: 1.5px !important;
+  text-shadow: 0 0 10px rgba(255, 255, 255, .5);
 }
 
 .home-slogan {
   margin-bottom: 40px;
   font-size: 25px;
   font-family: $minor, serif;
-  color: $midLynch;
+  color: $darkLynch;
   text-align: center;
+  text-shadow: 0 0 20px rgba(255, 255, 255, 1);
+  text-shadow: 0 0 20px rgba(255, 255, 255, 1);
 }
 
 .home-signup-form {
