--- a/client/styles/scss/partials/_base.scss
+++ b/client/styles/scss/partials/_base.scss
@@ -1,5 +1,8 @@
+/* Typefaces */
 $major: 'Cinzel';
 $minor: 'Raleway';
+
+/* Colors */
 $haze: #ECECEC;
 $porcelain: #ECF0F1;
 $darkLynch: #30363D;
@@ -18,7 +21,7 @@ body {
 }
 
 * {
-  font-family: 'Raleway', sans-serif;
+  font-family: $minor, sans-serif;
   font-weight: 200;
   // color: rgba(20, 20, 20, 0.9);
 }
