Cleanups to dashboard css and timeline fix

--- a/client/styles/scss/partials/_base.scss
+++ b/client/styles/scss/partials/_base.scss
@@ -62,3 +62,22 @@ ul {
 .haze-background {
   background-color: $haze !important;
 }
+
+.rotate {
+
+  /* Safari */
+  -webkit-transform: rotate(-90deg);
+
+  /* Firefox */
+  -moz-transform: rotate(-90deg);
+
+  /* IE */
+  -ms-transform: rotate(-90deg);
+
+  /* Opera */
+  -o-transform: rotate(-90deg);
+
+  /* Internet Explorer */
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+
+}
