--- a/client/styles/scss/partials/_button.scss
+++ b/client/styles/scss/partials/_button.scss
@@ -82,36 +82,8 @@
 }
 
 .analyze-btn {
-  width: 15% !important;
+  // width: 15% !important;
   position: absolute;
   left: 15px;
   bottom: 15px;
 }
-
-// button.close-modal {
-//   padding: 3px;
-//   font-size: 12px;
-//   color: $haze;
-//   border-color: $haze;
-//   &:hover {
-//     color: $lynch;
-//   }
-// }
-
-// a.login-button {
-//   -webkit-appearance: button;
-//   -moz-appearance: button;
-//   appearance: button;
-
-//   text-decoration: none;
-
-//   color: #3B5998;
-//   border-color: #3B5998;
-//   display: flex;
-//   width: 300px;
-//   height: 50px;
-//   &:hover {
-//     background-color: #3B5998;
-//     border-color: #3B5998 !important;
-//   }
-// }
